[gd_scene load_steps=2 format=3 uid="uid://b0ws2w6gra4qa"]

[ext_resource type="Script" uid="uid://canhachjjolf6" path="res://scripts/Arsenal.gd" id="1_183su"]

[node name="Arsenal" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_183su")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
text = "Voltar"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 200.0
offset_right = 800.0
offset_bottom = 300.0
text = "Arsenal pronto para produzir"

[node name="ProduceButton" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 350.0
offset_right = 600.0
offset_bottom = 430.0
text = "Produzir Pe√ßa"

[node name="CollectButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 650.0
offset_top = 350.0
offset_right = 850.0
offset_bottom = 430.0
text = "Coletar"